Structure Skia interop build id